--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ p {
   color: #2d2d2d;
 }
 
+
 /* TODO: size images manually so this is not necessary */
 img {
   max-height: 20rem;
@@ -28,8 +29,12 @@ header img {
 
 h1 .logo-w {
   font-size: 3.5rem;
+  display: inline-flex;
+  padding:1rem;
+  
 }
 
+.
 /**************** ASIDE ****************/
 
 input[type="submit"] {
@@ -48,7 +53,7 @@ section {
 }
 
 h2 {
-  padding-top: 1.5rem;
+  padding: 1.5rem;
   font-size: 2rem;
   text-align: center;
   color: #2d2d2d;
@@ -58,4 +63,11 @@ h3 {
   font-size: 1.2rem;
   text-align: center;
   color: #2d2d2d;
+  padding:1rem;
+}
+
+ul {
+  background-color: darkgrey;
+  text-align: center; 
+  padding: 2rem;
 }
