--- a/styles/main.css
+++ b/styles/main.css
@@ -11,9 +11,9 @@ p {
 
 
 /* TODO: size images manually so this is not necessary */
-img {
+/*img {
   max-height: 14.5rem;
-}
+}*/
 
 /***************** NAV *****************/
 
@@ -23,12 +23,12 @@ nav a:hover {
 
 /**************** HERO *****************/
 
-header img {
+/*header img {
   max-height: 6rem;
-}
+}*/
 
 h1 .logo-w {
-  font-size: 3rem;
+  font-size: 2rem;
   display: inline-flex;
   padding:1rem;
   
@@ -66,11 +66,36 @@ h3 {
 }
 
 ul {
-  background-color:burlywood;
-  text-align: center; 
-  padding: 2rem;
+  background-color:skyblue;
+  padding: 1.5rem;
+  display: inline-flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
-.item-container{
-  display: flex;
+img{
+  max-width:100%;
 }
+
+.container{
+  display: inline-flex;
+}
+
+form {
+    margin: 1rem;
+    margin-top: 5rem;
+}
+
+@media only screen and (min-width: 320px) and (max-width:768px) {
+html {
+  width:100%;
+  }
+
+  nav{
+    display: block;
+  }
+  .container{
+    display:block;
+    }
+}
+
